@@ -105,6 +105,7 @@ class HBaseInputFormat implements InputFormat<ImmutableBytesWritable, Result> {
     public org.apache.hadoop.mapred.InputSplit[] getSplits(JobConf job, int numSplits)
             throws IOException {
         inputFormat.setConf(job);
+        HBaseMapredUtil.addHBaseDelegationToken(job);
         return convertSplits(inputFormat.getSplits(HCatMapRedUtil.createJobContext(job, null,
                 Reporter.NULL)));
     }
