@@ -40,6 +40,8 @@ Release 0.4.0 - Unreleased
   HCAT-240. Changes to HCatOutputFormat to make it use SerDes instead of StorageDriver (toffer)
 
   NEW FEATURES
+  HCAT-296 Hcatalog should be able talk to secure hbase server using hbase delegation tokens (rohini via toffer)
+
   HCAT-249 Rework JSON StorageDriver into a JSON SerDe (khorgath via gates)
 
   HCAT-255 Define hadoop properties on the hcat command line (ctdean via gates)
